@@ -2,6 +2,8 @@ Changes in 22.20
 ================
 	* pstree sorts properly on names Debian #682014
 	* fuser -m regresion fixed SF #3559232, thanks to hanpt
+	* pstree finds orphaned processes SF#3537508
+
 Changes in 22.19
 ================
 	* killall with no args exits again SF #3536526
